build_log_2.txt

> Task :eventDeploy
Not running deploy task, skipping commit

> Task :createVersionFile
createVersionFile called. Path C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot

> Task :compileJava FAILED
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\vision\AprilTagVisionIOLimelight.java:7: error: package com.limelight does not exist
import com.limelight.LimelightHelpers;
                    ^
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\vision\AprilTagVisionIOLimelight.java:8: error: package com.limelight.LimelightHelpers does not exist
import com.limelight.LimelightHelpers.PoseEstimate;
                                     ^
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\vision\VIOSlamIOQuestNav.java:7: error: package gg.questnav does not exist
import gg.questnav.QuestNav;
                  ^
C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\vision\VIOSlamIOQuestNav.java:11: error: cannot find symbol
  private final QuestNav questNav;
                ^
  symbol:   class QuestNav
  location: class VIOSlamIOQuestNav
4 errors
Compilation Error!
GradleRIO detected this build failed due to a Compile Error (compileJava).
Check that all your files are saved, then scroll up in this log for more information.
[Incubating] Problems report is available at: file:///C:/Users/david/dev/robotics/frc/MARSLib/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\vision\AprilTagVisionIOLimelight.java:7: error: package com.limelight does not exist
  import com.limelight.LimelightHelpers;
                      ^
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\vision\AprilTagVisionIOLimelight.java:8: error: package com.limelight.LimelightHelpers does not exist
  import com.limelight.LimelightHelpers.PoseEstimate;
                                       ^
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\vision\VIOSlamIOQuestNav.java:7: error: package gg.questnav does not exist
  import gg.questnav.QuestNav;
                    ^
  C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\vision\VIOSlamIOQuestNav.java:11: error: cannot find symbol
    private final QuestNav questNav;
                  ^
    symbol:   class QuestNav
    location: class VIOSlamIOQuestNav
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1s
3 actionable tasks: 3 executed
